--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
     "@radix-ui/react-slot": "^1.2.4",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "formidable": "^3.5.4",
+    "google-translate-api-x": "^10.7.2",
     "gray-matter": "^4.0.3",
     "next": "^14.2.5",
     "pinyin-pro": "^3.28.0",
@@ -25,6 +27,7 @@
   },
   "devDependencies": {
     "@tailwindcss/typography": "^0.5.19",
+    "@types/formidable": "^3.4.6",
     "@types/node": "^20.14.9",
     "@types/react": "^18.2.15",
     "@types/react-dom": "^18.2.7",
