--- a/tsconfig.json
+++ b/tsconfig.json
@@ -16,6 +16,13 @@
     "incremental": true,
     "plugins": [{ "name": "next" }]
   },
-  "include": ["next-env.d.ts", "src/**/*.ts", "src/**/*.tsx", "src/**/*.mdx"],
+  "include": [
+    "next-env.d.ts",
+    "src/**/*.ts",
+    "src/**/*.tsx",
+    "src/**/*.mdx",
+    "tools/**/*.ts",
+    "tools/**/*.tsx"
+  ],
   "exclude": ["node_modules"]
 }
